# cv_book

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  Task9.py  add_telemetry.py  birds_view.py  example.py  label2xml.m  pyproject.toml  sence_data.py
Module_1/: 10_bitwise_operation.py  1_imread.py  2_cvtcolor.py  3_resize.py  5_pyr_up_down.py  6_cv_merge.py  7_crop_flip.py  8_copyMakeBorder.py  9_arithmetic_operation.py  Arithmetic Operations.ipynb  Bitwise Operations and Masking.ipynb  Cropping.ipynb  Drawing Images.ipynb  Grayscaling.ipynb  PaddingOperations.ipynb  Pixels.py  Reading, writing and displaying images.ipynb  Scaling, re-sizing and interpolations.ipynb  augmentations.py  channels_colorModels.py  cv_merge.py  graph_draw.py  matrix_multiplication.py  newtask__paint.py  pyr_up_down.py  task1.5_(SplitMerge).py  task1.py  task1_(ReaderWriter).py  task2.py  task2_(Grayscaling).py  task3.py  task3_(Cropping).py  task4.py  task4_(DrawingFigures).py  task5.py  task5_(Resizing).py  task6.py  task6_(AddSubtract).py  task7.5_(MasksUsage).py  task7.py  (+5 more)
Module_11/: LIDAR.ipynb  README.md
Module_1a/: ColorSpaces.ipynb  README.md  Rotations.ipynb  Segmentation_track.py  Translations.ipynb  road_projection.py  segmentation_rail.py  task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8_определение плоскости дороги
Module_1b/: Circles_calib.py  README.md  calibration.py  calibration_circle.py  calibration_fisheye.py  camera_motion.py
Module_2/: ColorSpaces.py  Filters.py  README.md  Rotations.py  Sun_blicks.py  Text detection and extraction.py  Translations.py  reduce_glare.py  sharpened.py  task_2.py  task_5(right).py  task_5.py  task_7.py
Module_2a/: 1_threshold.py  2_blur  2_morphologyEx.py  3_MakeBorder  3_hitmiss.py  4_erod_and_dilate.py  Morphological_Operations_segmentation.py  README.md
Module_2b_Morphology/: task_1  task_2  task_3
Module_3/: fast_detector.py  task_1.py  task_3.py  task_4.py  task_5.py
Module_4a/: README.md  sensing_system_project.py  task1.py  task2.py  task3.py  task_5.py
Module_4b/: readme.txt
Module_5/: simple.py  task_1.py  task_2.py  task_5.py  trafic_light_detector.py  tram_switch_recognition.ipynb  vanishing_point.py
Module_5c/: sciene_segmentation.ipynb
Module_6/: README.md  alpha_stabilize.py  navigator.py  raft_model.py  stabilize.py  task_1.py  task_1_3.py  task_2.py
Module_7/: calib.py  depth_map.py  disparity.py
Module_8/: visual_odometry.py
srccam/: README.md  pyproject.toml  requirements.txt  setup.py
srccam/srccam/: __init__.py  calib.py  camera.py  load_calib.py  object3d.py  point.py  season_reader.py  sense_data.py
(+64 files in other folders)
